# temp-c-closed

./: .gitignore  CMakeLists.txt
data/animal/: aves-sparrow-social-2010.edges  aves-sparrowlyon-flock-season2.edges  aves-sparrowlyon-flock-season3.edges  aves-weaver-social-00.edges  aves-weaver-social-01.edges  aves-weaver-social-02.edges  aves-weaver-social-04.edges  aves-weaver-social-05.edges  aves-weaver-social-06.edges  aves-weaver-social-07.edges  aves-weaver-social-09.edges  aves-weaver-social-10.edges  aves-weaver-social-11.edges  aves-weaver-social-13.edges  aves-weaver-social-14.edges  aves-weaver-social-15.edges  aves-weaver-social-17.edges  aves-weaver-social-18.edges  aves-weaver-social-19.edges  aves-weaver-social-20.edges  aves-weaver-social-21.edges  aves-weaver-social-22.edges  aves-wildbird-network-2.edges  aves-wildbird-network-3.edges  aves-wildbird-network-5.edges  fish-guppy-familiar-1.edges  fish-guppy-familiar-10.edges  fish-guppy-familiar-2.edges  fish-guppy-familiar-4.edges  fish-guppy-familiar-5.edges  fish-guppy-familiar-6.edges  fish-guppy-familiar-7.edges  fish-guppy-familiar-8.edges  fish-guppy-familiar-9.edges  fish-stickleback-group-1.edges  fish-stickleback-group-2.edges  fish-stickleback-group-3.edges  fish-stickleback-group-4.edges  fish-stickleback-group-5.edges  fish-stickleback-group-6.edges  (+274 more)
data/mammalia/: mammalia-baboon-association-group01.edges  mammalia-baboon-association-group02.edges  (+351 more)
results/: animal.tsv  animal_old.tsv  mammalia.tsv  sociopattern.tsv
source/: Graph.cpp  Graph.hpp  main.cpp  options.hpp
(+7 files in other folders)
